[metadata]
name = kbwl
version = attr: kbwl.version.__version__
url = https://github.com/GlobularOne/kbwl
author = Kamyar Hatamnezhad (GlobularOne)
author_email = GlobularOne@proton.me
description = Keyword Based Word List generator
long_description = file: README.md
license = Apache-2.0
license_files =
    LICENSE

[options]
packages = kbwl
python_requires = >=3.7
console_scripts = 
    kbwl = kbwl.main:main
